# OpenGL-Project

./: .clangd  .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: glad.c.29FF360E1B9A83D7.idx  glad.c.964D06E6D52D9E65.idx  glad.c.D781CFBEB02E1E4D.idx  glad.h.074C2BECEB0E18FF.idx  glad.h.D313B24E209DE05A.idx  glad.h.E41CEFD6BB1CABEB.idx  glfw3.h.0B231069C7D0B615.idx  glfw3.h.11F223F04473D3B2.idx  glfw3.h.BE7222162D23F085.idx  khrplatform.h.111ADA4D0CD9BE0F.idx  khrplatform.h.65E369E2249BFE29.idx  khrplatform.h.A8445E171641F09E.idx  main.cpp.2DC2654F6A15A5A1.idx  main.cpp.61969E441F02A02A.idx  main.cpp.928C050B1156A66A.idx  readFile.cpp.4ACEBF85DAF97E04.idx  readFile.cpp.BD25C40F0405CEE5.idx  readFile.hpp.1C3A158F62F7DA91.idx  readFile.hpp.27F318BF5CCA8015.idx  shader.cpp.5548972E48F46042.idx  shader.hpp.24C23087A9FADE7A.idx  stb_image.h.425485B928B3F17F.idx
assets/Toaster/: Toaster2.fbx  Toaster2.mtl
assets/cube/: cube.mtl
include/: camera.hpp  mesh.hpp  model.hpp  readFile.hpp  shader.hpp  vertex.hpp
include/glad/: glad.h
shaders/: model_shader.frag  shader.frag  shader.vert
src/: camera.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  readFile.cpp
src/shaders/: fragmentShader.glsl  shader.cpp  shader.frag  shader.vert  vertexShader.glsl
